test call cron 10,30,50

--- a/serverless.yml
+++ b/serverless.yml
@@ -18,7 +18,7 @@ functions:
     handler: handler.run
     events:
       # Invoke Lambda function every 2nd minute from Mon-Fri
-      - schedule: cron(0/2 * ? * MON-FRI *)
+      - schedule: cron(10,30,50 * ? * MON-FRI *)
 
 
 
