--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "homepage": "https://github.com/neripark/sls-cron-playground#readme",
   "dependencies": {
+    "chrome-launcher": "^0.15.0",
+    "lighthouse": "^9.3.1",
+    "lighthouse-logger": "^1.3.0",
     "serverless": "^3.2.1"
   }
 }
