--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chrome-launcher": "^0.15.0",
     "lighthouse": "^9.3.1",
     "lighthouse-logger": "^1.3.0",
-    "serverless": "^3.2.1"
+    "serverless": "^3.2.1",
+    "serverless-layers": "^2.5.4-beta.1"
   }
 }
