--- a/serverless.yml
+++ b/serverless.yml
@@ -7,6 +7,8 @@ frameworkVersion: '3'
 provider:
   name: aws
   runtime: nodejs14.x
+  # S3のバケットに合わせた
+  # 他のサービスも全部東京リージョンになるので注意
   region: ap-northeast-1
 
 functions:
@@ -24,8 +26,12 @@ functions:
     handler: handler.lighthouse
     events:
       - schedule: cron(10,30,50 * ? * MON-FRI *)
-
-
+plugins:
+  - serverless-layers
+custom:
+  serverless-layers:
+    layersDeploymentBucket: sls-lambda-node-cron-layer
+    # dependenciesPath: ./package.json
 
 # Note:
 # - rateHandler.handler と cronHandler.handlerを両方定義したら、rateHandler のみがAWS側に認識された。
