--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "lighthouse": "^9.3.1",
     "lighthouse-logger": "^1.3.0",
     "serverless": "^3.2.1",
-    "serverless-layers": "^2.5.4-beta.1"
+    "serverless-layers": "^2.5.2"
   }
 }
