--- a/package.json
+++ b/package.json
@@ -19,14 +19,12 @@
   "homepage": "https://github.com/neripark/sls-cron-playground#readme",
   "dependencies": {
     "chrome-aws-lambda": "^10.1.0",
-    "chrome-launcher": "^0.15.0",
     "lighthouse": "^9.3.1",
-    "lighthouse-logger": "^1.3.0",
-    "puppeteer-core": "^13.3.2",
-    "serverless": "^3.2.1",
-    "serverless-layers": "^2.5.2"
+    "puppeteer-core": "^13.3.2"
   },
   "devDependencies": {
-    "puppeteer": "^13.3.2"
+    "puppeteer": "^13.3.2",
+    "serverless": "^3.2.1",
+    "serverless-layers": "^2.5.2"
   }
 }
