--- a/serverless.yml
+++ b/serverless.yml
@@ -27,6 +27,7 @@ functions:
     events:
       # - schedule: cron(10,30,50 * ? * MON-FRI *)
       - schedule: cron(0 12 ? * FRI *)
+    timeout: 60
 plugins:
   - serverless-layers
 custom:
