--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "puppeteer-core": "^13.3.2"
   },
   "devDependencies": {
+    "@types/puppeteer": "^5.4.4",
     "puppeteer": "^13.3.2",
     "serverless": "^3.2.1",
-    "serverless-layers": "^2.5.2"
+    "serverless-layers": "^2.5.2",
+    "serverless-plugin-typescript": "^2.1.1",
+    "typescript": "^4.5.5"
   }
 }
