--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "chrome-aws-lambda": "^10.1.0",
     "lighthouse": "^9.3.1",
+    "node-fetch": "^2.6.7",
     "puppeteer-core": "^13.3.2"
   },
   "devDependencies": {
