--- a/serverless.yml
+++ b/serverless.yml
@@ -31,6 +31,7 @@ functions:
     timeout: 60
     environment:
       envName: ${self:custom.otherfile.environment.${self:provider.stage}.envName}
+      datadogApiKey: ${env.DATADOG_API_KEY}
 plugins:
   - serverless-layers
 custom:
