--- a/serverless.yml
+++ b/serverless.yml
@@ -27,7 +27,14 @@ functions:
     handler: handler.lighthouse
     events:
       # - schedule: cron(10,30,50 * ? * MON-FRI *)
-      - schedule: cron(0 12 ? * FRI *)
+
+      - schedule:
+          rate: cron(10,30,50 * ? * MON-FRI *)
+          input:
+            pageName: "Googleトップ"
+            url: "https://google.com"
+
+      # - schedule: cron(0 12 ? * FRI *)
     timeout: 60
     environment:
       envName: ${self:custom.otherfile.environment.${self:provider.stage}.envName}
